--- a/css/styles.css
+++ b/css/styles.css
@@ -267,7 +267,7 @@ header .container {
   display: block;
   font-weight: 700;
   font-size: 32px;
-  margin: 8px 0 16px;
+  margin: 8px 0 26px;
 }
 
 .benefits-item-text {
@@ -284,5 +284,58 @@ header .container {
 .benefits-plusitem-text {
   line-height: 162%;
   margin-bottom: 24px;
+}
+
+.benefits-plus-item:last-child .benefits-plusitem-text {
+  margin-bottom: 0;
+}
+
+.benefits-item:not(:last-child) {
+  margin-bottom: 100px;
+}
+
+.benefits-item:nth-child(2) .benefits-plus-item {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 16px;
+  width: 352px;
+}
+
+.customer-support-icon-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 35px;
+  height: 35px;
+  margin-right: 30px;
+}
+
+.benefits-item:nth-child(2) .benefits-plus-item .customer-support-icon-wrapper {
+  border: 2.92px solid #fff;
+  border-radius: 14px;
+}
+
+.benefits-item:nth-child(2)
+  .benefits-plus-item:nth-child(1)
+  .customer-support-icon-wrapper {
+  background-color: #f90;
+}
+
+.benefits-item:nth-child(2)
+  .benefits-plus-item:nth-child(2)
+  .customer-support-icon-wrapper {
+  background-color: #f03e3d;
+}
+
+.benefits-item:nth-child(2)
+  .benefits-plus-item:nth-child(3)
+  .customer-support-icon-wrapper {
+  background-color: #4d8dff;
+}
+
+.benefits-item:nth-child(2) .benefits-plusitem-text {
+  margin-bottom: 0;
+  max-width: 287px;
 }
 /* #endregion */
