--- a/css/styles.css
+++ b/css/styles.css
@@ -611,5 +611,93 @@ header .container {
 }
 /* #endregion */
 
+/* #region Reviews */
+.reviews .container {
+  max-width: 350px;
+}
+
+.reviews-item {
+  border: 1px solid #dedede;
+  border-radius: 5px;
+  padding: 26px;
+  width: 327px;
+}
+
+.reviews-item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.reviews-item-stars {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 4px;
+  margin-bottom: 16px;
+}
+
+.review-text {
+  letter-spacing: 0.01em;
+  color: #32454f;
+  margin-bottom: 16px;
+}
+
+.reviewer-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 14px;
+}
+
+.reviewer-name {
+  font-weight: 600;
+  line-height: 150%;
+  letter-spacing: 0.01em;
+  color: #02897a;
+}
+
+.reviewer-job {
+  font-weight: 500;
+  font-size: 14px;
+  letter-spacing: 0.01em;
+  color: #252b42;
+}
+
+/* #endregion */
+
+/* #region Accent */
+.accent .container {
+  max-width: 372px;
+  border-radius: 32px;
+  background-color: #02897a;
+  padding: 18px 22px;
+}
+
+.section-title {
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 151%;
+  text-align: center;
+  color: #fff;
+}
+
+.accent-button {
+  border-radius: 8px;
+  border: none;
+  min-width: 150px;
+  padding: 10px;
+  margin: 0 auto;
+  margin-top: 56px;
+  font-weight: 600;
+  font-size: 20px;
+  color: #02897a;
+  background-color: #fff;
+}
+
+.accent-img {
+  margin-top: 32px;
+}
+
+/* #endregion */
+
 /* Look later!!! */
 /* https://developer.mozilla.org/en-US/docs/Learn_web_development/Core/Text_styling/Fundamentals */
